# app

./: .gitignore  Cargo.toml  LICENSE  README.md  download-assets.bat  run-console.bat  run-gui.bat
.cargo/: config.toml
.github/workflows/: static.yml  windows-package.yml
docs/: CNAME  MVP.md  VAD_AND_DUCKING.md
scripts/: bump-version.ps1  ci-check.ps1  common.ps1  download-assets.ps1  install-nsis.ps1  package-windows.ps1  run.ps1  stage-windows-package.ps1
site/: CNAME  README.md  about.html  demo.js  index.html  privacy.html  styles.css
src/: app.rs  audio.rs  config.rs  ducking.rs  lib.rs  main.rs  runtime.rs  session.rs  speaker.rs  vad.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/platform/: windows.rs
ui/: index.html  main.js  restore.html  restore.js  styles.css
