[package]
name = "muteback"
version = "0.1.0"
edition = "2021"

[lib]
name = "muteback"
path = "src/lib.rs"

[[bin]]
name = "muteback"
path = "src/main.rs"

[dependencies]
cpal = { version = "0.16", optional = true }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-17"], optional = true }
webrtc-vad = { version = "0.4", optional = true }
windows = { version = "0.62", optional = true, features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[features]
default = ["engine"]
engine = ["dep:cpal", "dep:ndarray", "dep:ort", "dep:webrtc-vad", "dep:windows"]
