[package]
name = "muteback-tauri"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
muteback = { path = "..", default-features = false, features = ["engine"] }
